Updated a style for the bold text in verses so that it doesn't cause weird line spacing issues

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -45,6 +45,8 @@ a:hover {
     text-decoration:underline;
 }
 
+b, strong {line-height: 10px;}
+
 main ol, main ul {
     padding-left: 35px;
 }
